добавил слайдер(не работает)

--- a/css/font-face.css
+++ b/css/font-face.css
@@ -1,23 +1,23 @@
 /*
-* PT Sans Narrow
+* PT Sans
 =====================================================*/
 @font-face {
-  font-family: 'PT Sans Narrow';
+  font-family: 'PT Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('PT Sans Narrow'), 
-       local('PTSans-Narrow'),
+  src: local('PT Sans'), 
+       local('PTSans'),
        url(../fonts/ptsans.woff2) format('woff2'),
         url(../fonts/ptsans.woff) format('woff');
 }
 
 
 @font-face {
-  font-family: 'PT Sans Narrow';
+  font-family: 'PT Sans';
   font-style: normal;
   font-weight: 700;
-  src: local('PT Sans Narrow Bold'), 
-       local('PTSans-Narrow-Bold'),
+  src: local('PT Sans Bold'), 
+       local('PTSans-Bold'),
        url(../fonts/ptsansbold.woff2) format('woff2')
        url(../fonts/ptsansbold.woff) format('woff');
 }
